--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "@types/fs-extra": "^5.0.4",
     "@types/mocha": "^2.2.42",
     "@types/node": "^7.0.43",
-    "tslint": "^5.8.0",
-    "typescript": "^2.6.1",
-    "vscode": "^1.1.6"
+    "tslint": "5.10.0",
+    "typescript": "2.9.2",
+    "vscode": "1.1.18"
   },
   "dependencies": {
     "fs-extra": "^7.0.0"
